# telemetry-docker-resources

./: .pre-commit-config.yaml  README.md  cookiecutter.json
docs/: cookiecutter-attributes.md
{{cookiecutter.docker_image_name_formatted}}/: .pre-commit-config.yaml  .tool-versions  Makefile  buildspec.yml  buildspec_pr.yml  pyproject.toml
{{cookiecutter.docker_name_formatted}}/: .gitignore  .tool-versions  Makefile  buildspec.yml  buildspec_pr.yml
